@@ -3,19 +3,20 @@ package study.boardProject.user.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import study.boardProject.auth.domain.User;
-import study.boardProject.comment.Comment;
+import study.boardProject.auth.entity.User;
+import study.boardProject.comment.entity.Comment;
 import study.boardProject.comment.dto.CommentResponse;
-import study.boardProject.post.domain.Post;
+import study.boardProject.post.entity.Post;
 import study.boardProject.post.dto.PostSimpleResponse;
 import study.boardProject.comment.repository.CommentRepository;
-import study.boardProject.like.domain.Like;
-import study.boardProject.like.domain.LikeCategory;
+import study.boardProject.like.entity.Like;
+import study.boardProject.like.entity.LikeCategory;
 import study.boardProject.like.repository.LikeRepository;
 import study.boardProject.post.repository.PostRepository;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,13 +30,13 @@ public class UserServiceImpl implements UserService {
     @Override
     public List<PostSimpleResponse> getMyPosts(User user) {
         List<Post> posts = postRepository.findPostsByUserLoginIdOrderByCreatedAtDesc(user.getLoginId());
-        return posts.stream().map(PostSimpleResponse::of).toList();
+        return posts.stream().map(PostSimpleResponse::of).collect(Collectors.toList());
     }
 
     @Override
     public List<CommentResponse> getMyComments(User user) {
         List<Comment> comments = commentRepository.findCommentsByUserLoginIdOrderByCreatedAtDesc(user.getLoginId());
-        return comments.stream().map(CommentResponse::of).toList();
+        return comments.stream().map(CommentResponse::of).collect(Collectors.toList());
     }
 
     @Override
@@ -47,7 +48,7 @@ public class UserServiceImpl implements UserService {
             Post post = postRepository.findById(postId).orElseThrow(IllegalArgumentException::new);
             posts.add(post);
         }
-        return posts.stream().map(PostSimpleResponse::of).toList();
+        return posts.stream().map(PostSimpleResponse::of).collect(Collectors.toList());
     }
 
     @Override
@@ -59,6 +60,6 @@ public class UserServiceImpl implements UserService {
             Comment comment = commentRepository.findById(commentId).orElseThrow(IllegalArgumentException::new);
             comments.add(comment);
         }
-        return comments.stream().map(CommentResponse::of).toList();
+        return comments.stream().map(CommentResponse::of).collect(Collectors.toList());
     }
 }
